# kdsm-manager-task-client

./: README.md  pyproject.toml
src/kdsm_manager_task_client/: __init__.py  bearer_auth.py  group.py  log_formatter.py  log_handler.py  settings.py  subtask.py  subtask_log.py  task.py  task_client.py  task_status.py
tests/: test_task_client.py
