[project]
name = "kdsm-manager-task-client"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Julius Koenig", email = "julius.koenig@kds-kg.de"},
]
dependencies = ["requests>=2.32.3", "wiederverwendbar>=0.7.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
